added admin auth endpoints
