# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\LoginController;
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\Admin\AdminAuthController;
 use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\Api\ProductController;
 use app\Http\Controllers\TestController;
@@ -27,6 +28,16 @@ Route::middleware(['auth:token-cookie'])->group(function () {
         Route::put('/', 'update');
     });
     Route::post('/logout', [LoginController::class, 'destroy']);
+});
+
+Route::prefix('admin')->name('admin.')->group(function () {
+    Route::controller(AdminAuthController::class)->prefix('login')->name('login.')->group(function () {
+        Route::post('/', 'login');
+    });
+
+    Route::middleware(['auth:sanctum'])->group(function () {
+        Route::post('/logout', [AdminAuthController::class, 'logout']);
+    });
 });
 
 // Route::get('/hello', function () {
